# ProjectEuler

./: CMakeLists.txt  README.md  main.c
task_010/: CMakeLists.txt  main.c  task_010.c
task_011/: CMakeLists.txt  main.c  task_011.c
task_012/: CMakeLists.txt  task_012.c
task_013/: CMakeLists.txt
